Updating project to use nwts-parent POM as parent project, fixing numerous bugs found by findbugs